# TerrariaCloneRefactor

./: CMakeLists.txt  README.md  imgui.ini
src/: ChunkLoader.cpp  EnemyHandler.cpp  Game.cpp  LightHandler.cpp  Player.cpp  Texture.cpp  TileRenderUtil.cpp  Zombie.cpp  main.cpp  settings.cpp
src/include/: Blocks.h  ChunkLoader.hpp  EnemyHandler.hpp  Game.hpp  LightHandler.hpp  PerlinNoise.hpp  Player.hpp  Settings.hpp  Texture.hpp  TileRenderUtil.hpp  Zombie.hpp
